cmake_minimum_required(VERSION 3.0.2)
project(smooth_derivative)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_RERQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_compile_options(-std=c++17 -Wall -Wextra -Wshadow -Wconversion -Wpedantic -Werror)
add_executable(${PROJECT_NAME} src/${PROJECT_NAME}.cpp)